Blobrefs are now first class in code and always prefixed + good error reportin
